@@ -1,6 +1,7 @@
 DIST alsa-lib-1.0.16.tar.bz2 782235 RMD160 828e1d101e0cc2814db2276e08c26ecb9aa0f94d SHA1 9cca050bf3fb18bf87aeeabe205415431d4d8653 SHA256 ae19b33f109e9185c4df709fcab7f6cbbacce82565c5025ba4ebc0e2beca26cd
 DIST alsa-lib-1.0.16rc2.tar.bz2 782576 RMD160 f76e7c2245ae09a757aa5a75104c59ba922832d8 SHA1 6a53dcc107fc9d527869d70ab4ef869493870ef8 SHA256 3860fcb9a9b6f025484bc719c1af3471105e71ee4bd2769105e6cab263d22131
-EBUILD alsa-lib-1.0.16.ebuild 2832 RMD160 44c2eaae4f74a346c1aca6fd0eb9ace134b1289e SHA1 38d430cd4a648f3c7537ac5538ee64d1ef2e8f1b SHA256 339b057dde994f7be5bab29ce02205fb2ec550e80b093e8fa1c6929d3689508d
+EBUILD alsa-lib-1.0.16-r1.ebuild 2907 RMD160 2ad536935a3ceb39cfb72c9669a1d06a91802d48 SHA1 1054b029a85298c13ca2239021459cca04d203e2 SHA256 78ddc71c2e2e0c9cb17b72521b100f27577ad90c5339e736a46cbfacb1236311
+EBUILD alsa-lib-1.0.16.ebuild 2833 RMD160 0b7ef940272870d230824eb5d4a8b2db97f20c1b SHA1 5b84fab41cdeed07bd85f1a7e2aa0ec2cacfed8f SHA256 fd6751390264fda88c11fb4a8d71dbde3cd3a2e0bd7b8eb5b49024b709a36912
 EBUILD alsa-lib-1.0.16_rc2.ebuild 2838 RMD160 d32bca070f370086d559b3e3a73dab7ecbc9219d SHA1 d87eb4d97bef097c6cd5a490cb9ce5c2e3e7a4d2 SHA256 b388f238c4c8a72e76a456c54fcc720a29b83ef7ad556c237528fe098cb25fcb
-MISC ChangeLog 38454 RMD160 8bbdd4dad3e2567c1bb550746e50a67e8e35331b SHA1 eac84f98f4816a51670262ffe18cf2815df352a3 SHA256 2e1d34dfe7022b651fb607bbecc4fb3f47271c3eca56f1dcf56df47f86c02c6f
+MISC ChangeLog 38699 RMD160 252747a0bf7ea4be9369a0cdc1784f7b9a68139f SHA1 811b27a8497f03a007e221ab9da83444be70e984 SHA256 4aa3b48e5d7b2d5757f09c6ac760629fe2570ab555f7d9a2c8f495a4159e1542
 MISC metadata.xml 220 RMD160 e49f8bb330d1798cd2c8ee5335cef1784f0d7ccb SHA1 1b895fe6cae4b8eab08ba1a6a1212baf4b4b4105 SHA256 8570ef11cd59b0d8edb71e78eecaec423616836b10eacb86bee0de941f0ae054
